--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Estilos generales */
+
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -50,7 +50,7 @@ body {
     font-weight: bold;
 }
 
-/* Secciones */
+/* Sections */
 .section {
     padding: 2rem 0;
     text-align: center;
@@ -107,15 +107,15 @@ body {
 }
 
 .education-content, .experience-content {
-    flex: 1; /* Toma la mayor parte del espacio disponible */
+    flex: 1; 
     padding-right: 1rem;
     text-align: left;
 }
 
 .education-logo img, .experience-logo img {
-    max-width: 200px; /* Ajusta el tamaño máximo de la imagen */
-    max-height: 160px; /* Asegura que no se desborde verticalmente */
-    object-fit: contain; /* Ajusta la imagen proporcionalmente */
+    max-width: 200px; 
+    max-height: 160px; 
+    object-fit: contain;
     border-radius: 4px;
 }
 
@@ -146,7 +146,7 @@ body {
     display: flex;
 }
 
-/* Additional styling for task list */
+
 .task p {
     margin: 0;
     cursor: pointer;
@@ -185,7 +185,7 @@ body {
     color: #333;
 }
 
-/* Responsive adjustments */
+
 @media (max-width: 768px) {
     .skills-icons {
         flex-direction: column;
