--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+/* Estilos generales */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -40,6 +40,9 @@ body {
 }
 
 .main-nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin-top: 1rem;
 }
 
@@ -50,7 +53,7 @@ body {
     font-weight: bold;
 }
 
-/* Sections */
+/* Secciones */
 .section {
     padding: 2rem 0;
     text-align: center;
@@ -83,6 +86,7 @@ body {
     color: #007bff;
 }
 
+
 .education-item, .experience-item {
     display: flex;
     justify-content: space-between;
@@ -92,7 +96,11 @@ body {
     padding: 1rem;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    
+    
 }
+
+
 
 .education-item h3, .experience-item h3 {
     font-size: 1.5rem;
@@ -115,7 +123,7 @@ body {
 .education-logo img, .experience-logo img {
     max-width: 200px; 
     max-height: 160px; 
-    object-fit: contain;
+    object-fit: contain; 
     border-radius: 4px;
 }
 
@@ -126,8 +134,10 @@ body {
 }
 
 .task-description {
+    
     display: none;
-    position: absolute;
+    flex: 1;
+    position: relative;
     top: 0;
     left: 10%;
     background-color: #f8f8f8;
@@ -135,17 +145,17 @@ body {
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 4px;
-    width: 700px;
+    width: 70%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     font-size: 0.9rem;
     z-index: 10;
+    
+    
 }
 
-/* Show the description when hovering over the task */
 .task:hover .task-description {
-    display: flex;
+    display: block;
 }
-
 
 .task p {
     margin: 0;
@@ -185,15 +195,18 @@ body {
     color: #333;
 }
 
-
+/* Responsive adjustments */
 @media (max-width: 768px) {
     .skills-icons {
-        flex-direction: column;
-        align-items: center;
+        flex-direction: row;
+        justify-content: space-around;
     }
 
     .skill {
-        margin: 1rem 0;
+        margin: 1rem;
+    }
+    .education-item, .experience-item{
+        flex-direction: column;
     }
 }
 
