--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,7 @@ body {
 
 .education-item, .experience-item {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     margin: 1rem 0;
@@ -114,18 +115,10 @@ body {
     margin: 0.3rem 0;
 }
 
-.experience-content {
+.education-content, .experience-content {
     flex: 1; 
     padding-right: 1rem;
     text-align: left;
-}
-
-.education-content{
-    display: flex;
-      flex-direction: column; 
-      gap: 20px; 
-      align-items: flex-start;
-
 }
 
 .education-logo img, .experience-logo img {
@@ -242,5 +235,6 @@ body {
     background: #007bff;
     color: white;
 }
+
 
 
